2013-01-11  Aaron S. Hawley  <Aaron.Hawley@vtinfo.com>

	* gnus-start.el (gnus-check-new-newsgroups): Fix ambiguous doc string
	cross-reference(s).

	* gnus-sum.el (gnus-summary-newsgroup-prefix): Fix ambiguous doc string
	cross-reference(s).

2013-01-11  Dmitry Antipov  <dmantipov@yandex.ru>

	* gnus-art.el (gnus-mime-display-security): Use point-min-marker
	and point-max-marker.
	* gnus-async.el (gnus-async-article-callback): Use point-max-marker.

2013-01-11  Julien Danjou  <julien@danjou.info>

	* color.el (color-rgb-to-hsv): Fix conversion computing in case min and
	max are almost equal. Also return the correct value for V which is
	already between 0 and 1.

2013-01-10  Uwe Brauer  <oub@mat.ucm.es>  (tiny change)

	* mml-smime.el (mml-smime-encrypt-to-self): New user option analogous
	to mml2015-encrypt-to-self.
	(mml-smime-epg-encrypt): Respect mml-smime-encrypt-to-self.

2013-01-09  Daiki Ueno  <ueno@gnu.org>

	* mml-smime.el (epg-sub-key-fingerprint): Autoload for
	mml-smime-epg-find-usable-secret-key.

2013-01-08  Glenn Morris  <rgm@gnu.org>

	* mml-smime.el (mml-smime-sign-with-sender): Add :version.

2013-01-07  Daiki Ueno  <ueno@gnu.org>

	* mml-smime.el: Support signing by sender.
	Requested by Uwe Brauer.
	(mml-smime-sign-with-sender): New user option analogous
	to mml2015-sign-with-sender.
	(mml-smime-epg-sign): Respect mml-smime-sign-with-sender.
	(mml-smime-epg-find-usable-secret-key): New helper function copied from
	mml2015.el.

2012-12-31  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-msg.el (gnus-inews-insert-gcc): Don't insert Gcc headers if Gnus
	isn't running, because Gnus will probably not know how to handle the
	Gcc header (bug#11941).

	* nnimap.el (nnimap-update-info): Treat \Deleted articles as \Read
	articles.

2012-12-29  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnfolder.el (nnfolder-recursive-directory-files): New function.
	(nnfolder-generate-active-file): Make this function work with recursive
	folder names.
