@@ -1,3 +1,9 @@
+2013-01-13  Richard Stallman  <rms@gnu.org>
+
+	* message.el (message-forward-make-body-mime): New args BEG, END
+	specify what part of FORWARD-BUFFER to use.  Do the work directly
+	instead of calling `mml-insert-buffer'.
+
 2013-01-11  Aaron S. Hawley  <Aaron.Hawley@vtinfo.com>
 
 	* gnus-start.el (gnus-check-new-newsgroups): Fix ambiguous doc string
